libqt6c/src/libqwidget.hpp

typedef struct QKeySequence QKeySequence;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QWidget QWidget;
typedef struct QWindow QWindow;
bool QWidget_FocusNextPrevChild(QWidget* self, bool next);
void QWidget_Render22(QWidget* self, QPaintDevice* target, const QPoint* targetOffset);
void QWidget_Render3(QWidget* self, QPaintDevice* target, const QPoint* targetOffset, const QRegion* sourceRegion);
void QWidget_Render4(QWidget* self, QPaintDevice* target, const QPoint* targetOffset, const QRegion* sourceRegion, int renderFlags);
void QWidget_Render23(QWidget* self, QPainter* painter, const QPoint* targetOffset);
void QWidget_Render32(QWidget* self, QPainter* painter, const QPoint* targetOffset, const QRegion* sourceRegion);
void QWidget_Render42(QWidget* self, QPainter* painter, const QPoint* targetOffset, const QRegion* sourceRegion, int renderFlags);
QPixmap* QWidget_Grab1(QWidget* self, const QRect* rectangle);
void QWidget_GrabGesture2(QWidget* self, int type, int flags);
int QWidget_GrabShortcut2(QWidget* self, const QKeySequence* key, int context);
void QWidget_SetShortcutEnabled2(QWidget* self, int id, bool enable);
void QWidget_SetShortcutAutoRepeat2(QWidget* self, int id, bool enable);
void QWidget_SetWindowFlag2(QWidget* self, int param1, bool on);
void QWidget_SetAttribute2(QWidget* self, int param1, bool on);
QWidget* QWidget_CreateWindowContainer2(QWindow* window, QWidget* parent);
QWidget* QWidget_CreateWindowContainer3(QWindow* window, QWidget* parent, int flags);
bool QWidget_FocusNextChild(QWidget* self);
bool QWidget_FocusPreviousChild(QWidget* self);
void QWidget_UpdateMicroFocus1(QWidget* self, int query);
void QWidget_Create1(QWidget* self, unsigned long long param1);
void QWidget_Create2(QWidget* self, unsigned long long param1, bool initializeWindow);
void QWidget_Create3(QWidget* self, unsigned long long param1, bool initializeWindow, bool destroyOldWindow);
void QWidget_Destroy1(QWidget* self, bool destroyWindow);
void QWidget_Destroy2(QWidget* self, bool destroyWindow, bool destroySubWindows);