QtBeef/src/Qt/qwidget.bf

	[LinkName("QWidget_FocusNextPrevChild")]
	public static extern bool QWidget_FocusNextPrevChild(QWidget_Ptr* self, bool next);
	[LinkName("QWidget_FocusNextChild")]
	public static extern bool QWidget_FocusNextChild(QWidget_Ptr* self);
	[LinkName("QWidget_FocusPreviousChild")]
	public static extern bool QWidget_FocusPreviousChild(QWidget_Ptr* self);
	[LinkName("QWidget_Tr2")]
	public static extern libqt_string QWidget_Tr2(c_char* s, c_char* c);
	[LinkName("QWidget_Tr3")]
	public static extern libqt_string QWidget_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QWidget_Render22")]
	public static extern void QWidget_Render22(QWidget_Ptr* self, QPaintDevice_Ptr* target, QPoint_Ptr* targetOffset);
	[LinkName("QWidget_Render3")]
	public static extern void QWidget_Render3(QWidget_Ptr* self, QPaintDevice_Ptr* target, QPoint_Ptr* targetOffset, QRegion_Ptr* sourceRegion);
	[LinkName("QWidget_Render4")]
	public static extern void QWidget_Render4(QWidget_Ptr* self, QPaintDevice_Ptr* target, QPoint_Ptr* targetOffset, QRegion_Ptr* sourceRegion, void* renderFlags);
	[LinkName("QWidget_Render23")]
	public static extern void QWidget_Render23(QWidget_Ptr* self, QPainter_Ptr* painter, QPoint_Ptr* targetOffset);
	[LinkName("QWidget_Render32")]
	public static extern void QWidget_Render32(QWidget_Ptr* self, QPainter_Ptr* painter, QPoint_Ptr* targetOffset, QRegion_Ptr* sourceRegion);
	[LinkName("QWidget_Render42")]
	public static extern void QWidget_Render42(QWidget_Ptr* self, QPainter_Ptr* painter, QPoint_Ptr* targetOffset, QRegion_Ptr* sourceRegion, void* renderFlags);
	[LinkName("QWidget_Grab1")]
	public static extern QPixmap_Ptr QWidget_Grab1(QWidget_Ptr* self, QRect_Ptr* rectangle);
	[LinkName("QWidget_GrabGesture2")]
	public static extern void QWidget_GrabGesture2(QWidget_Ptr* self, Qt_GestureType type, void* flags);
	[LinkName("QWidget_GrabShortcut2")]
	public static extern c_int QWidget_GrabShortcut2(QWidget_Ptr* self, QKeySequence_Ptr* key, Qt_ShortcutContext context);
	[LinkName("QWidget_SetShortcutEnabled2")]
	public static extern void QWidget_SetShortcutEnabled2(QWidget_Ptr* self, c_int id, bool enable);
	[LinkName("QWidget_SetShortcutAutoRepeat2")]
	public static extern void QWidget_SetShortcutAutoRepeat2(QWidget_Ptr* self, c_int id, bool enable);
	[LinkName("QWidget_SetWindowFlag2")]
	public static extern void QWidget_SetWindowFlag2(QWidget_Ptr* self, Qt_WindowType param1, bool on);
	[LinkName("QWidget_SetAttribute2")]
	public static extern void QWidget_SetAttribute2(QWidget_Ptr* self, Qt_WidgetAttribute param1, bool on);
	[LinkName("QWidget_CreateWindowContainer2")]
	public static extern QWidget_Ptr* QWidget_CreateWindowContainer2(QWindow_Ptr* window, QWidget_Ptr* parent);
	[LinkName("QWidget_CreateWindowContainer3")]
	public static extern QWidget_Ptr* QWidget_CreateWindowContainer3(QWindow_Ptr* window, QWidget_Ptr* parent, void* flags);
	[LinkName("QWidget_UpdateMicroFocus1")]
	public static extern void QWidget_UpdateMicroFocus1(QWidget_Ptr* self, Qt_InputMethodQuery query);
	[LinkName("QWidget_Create1")]
	public static extern void QWidget_Create1(QWidget_Ptr* self, c_ulonglong param1);
	[LinkName("QWidget_Create2")]
	public static extern void QWidget_Create2(QWidget_Ptr* self, c_ulonglong param1, bool initializeWindow);
	[LinkName("QWidget_Create3")]
	public static extern void QWidget_Create3(QWidget_Ptr* self, c_ulonglong param1, bool initializeWindow, bool destroyOldWindow);
	[LinkName("QWidget_Destroy1")]
	public static extern void QWidget_Destroy1(QWidget_Ptr* self, bool destroyWindow);
	[LinkName("QWidget_Destroy2")]
	public static extern void QWidget_Destroy2(QWidget_Ptr* self, bool destroyWindow, bool destroySubWindows);
}
